; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_utils.c_debug_print_dstreg.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_utils.c_debug_print_dstreg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.shader_reg = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"%s%s%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @debug_print_dstreg(%struct.shader_reg* %0) #0 {
  %2 = alloca %struct.shader_reg*, align 8
  store %struct.shader_reg* %0, %struct.shader_reg** %2, align 8
  %3 = load %struct.shader_reg*, %struct.shader_reg** %2, align 8
  %4 = call i32 @get_regname(%struct.shader_reg* %3)
  %5 = load %struct.shader_reg*, %struct.shader_reg** %2, align 8
  %6 = call i32 @debug_print_relarg(%struct.shader_reg* %5)
  %7 = load %struct.shader_reg*, %struct.shader_reg** %2, align 8
  %8 = getelementptr inbounds %struct.shader_reg, %struct.shader_reg* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @debug_print_writemask(i32 %10)
  %12 = call i8* @wine_dbg_sprintf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %4, i32 %6, i32 %11)
  ret i8* %12
}

declare dso_local i8* @wine_dbg_sprintf(i8*, i32, i32, i32) #1

declare dso_local i32 @get_regname(%struct.shader_reg*) #1

declare dso_local i32 @debug_print_relarg(%struct.shader_reg*) #1

declare dso_local i32 @debug_print_writemask(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
